Fixed issues on iphone 5

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -579,7 +579,8 @@ footer{
         font-size: 15px;
       }
       .fa{
-        margin: 0;
+        margin: 0 auto;
+        margin-left: -10px;
         padding-right: 0;
       }
     }
@@ -588,8 +589,26 @@ footer{
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px) {
+  .about{
+    h1{
+      font-size: 2.3em;
+    }
+  }
+
+  .work{
+    h1{
+      font-size: 2.3em;
+    }
+  }
+
+  .contact{
+    h1{
+      font-size: 2.3em;
+    }
+  }
+
   nav{
-    height: 80px;
+    height: 58px;
   }
   .navbar-brand{
     padding: 15px 20px;
